@@ -3,7 +3,7 @@
 	.type	foo, %function
 foo:
 	.byte 0
-	.section .text.opt_out,"ax",%progbits
-	.type	opt_out, %function
+	.section .data.opt_out,"aw",%progbits
+	.type	opt_out, %object
 opt_out:
 	.dc.a bar
